--- a/frontend/src/_styles/_variable.styl
+++ b/frontend/src/_styles/_variable.styl
@@ -7,6 +7,7 @@ $color-darkcoral = #d65045
 $color-smokyblack = #130504
 $color-platinum = #e6e6e6
 $color-snow = #fbfcfc
+$color-bondiblue = #009ba4
 $color-pagination = #f6f6f6
 $color-dark = #212121
 
