--- a/frontend/src/_styles/modules/fonts.styl
+++ b/frontend/src/_styles/modules/fonts.styl
@@ -2,3 +2,8 @@
     font-family 'Panton'
     font-style normal
     src url('/fonts/panton/Panton.otf')
+
+@font-face
+    font-family 'PantonRI'
+    font-style normal
+    src url('/fonts/panton/PantonRegularItalic.otf')
