--- a/frontend/src/_styles/modules/heading.styl
+++ b/frontend/src/_styles/modules/heading.styl
@@ -9,3 +9,8 @@
 		font-family 'Panton'
 		font-size 40px
 		line-height 50px
+
+	&--lvl3
+		font-family 'Panton'
+		font-size 30px
+		line-height 30px
