--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -37,7 +37,6 @@ block content
                         .ui-configuration__link
                             a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
                                 i +
-        
     .ui-project-home
         .grid.grid--container
             .row.row--xl-center.ui-project-home__header
@@ -91,7 +90,29 @@ block content
                 .col.col--xl-3
                     .ui-project-home__photo--small(style="background-image: url('/images/projects/1.jpg')")
                     .ui-project-home__photo--small(style="background-image: url('/images/projects/1.jpg')")
-
+    .ui-rewiew
+        .grid.grid--container
+            .row
+                .col.col--xl-12
+                    .ui-heading.ui-heading--lvl2.ui-rewiew__header Офисные перегородки
+            .row
+                .col.col--xl-6
+                    .ui-text.ui-text--bold Офисная перегородка - конструкция, главное преимущество которой – универсальность.
+                    .ui-text Компания «Оки-Доки» предлагает огромное количество вариантов изделий, которые удачно впишутся в помещения абсолютно любого коммерческого объекта.
+                .col.col--xl-6
+                    .ui-text.ui-text--italic Эффективность конструкций определяется их многофункциональностью: они позволяют не только нужным образом разбивать помещения на зоны, но еще и придавать им нужный стиль. Именно поэтому перегородки можно рассматривать, как декоративный элемент интерьера.
+            .row
+                .col.col--xl-6
+                    .ui-text-box.ui-text-box--darkcoral
+                        .ui-heading.ui-heading--lvl3.ui-text-box__header Производство перегородок
+                        .ui-text-box__text У нас вы можете заказать офисную перегородку по всей России, в том числе в Москве.#[br] Для изготовления таких конструкций используются разные материалы, каждый из которых имеет преимущества.
+                .col.col--xl-6
+                    .ui-text-box.ui-text-box--bondiblue 
+                        .ui-heading.ui-heading--lvl3.ui-text-box__header Офисные перегородки, #[br]как предмет интерьера офиса
+                        .ui-text-box__text Ассортимент перегородок для офиса поражает разнообразием не только цветовых решений, но и различными вариантами декора, формы и конфигураций. В таких условиях заказать наиболее оптимальную и подходящую под конкретное помещение модель очень просто.
+            .row
+                .col.col--xl-12
+                    .ui-rewiew__text.ui-text.ui-text--italic Кроме того, поверхность офисной перегородки может быть декорирована текстилем или виниловым покрытием. Вы можете заказать как типовое, так и дизайнерское оформление конструкции. Специалисты нашей компании благодаря своему большому опыту в силах реализовать любой проект.
     .ui-customer-reviews
         .grid.grid--container
             .row
