материалы, преимущества, стоимость

--- a/frontend/src/_styles/_variable.styl
+++ b/frontend/src/_styles/_variable.styl
@@ -10,6 +10,7 @@ $color-snow = #fbfcfc
 $color-bondiblue = #009ba4
 $color-pagination = #f6f6f6
 $color-dark = #212121
+$color-medium = #313131
 
 $breakpoints = {
   'xs' :  0,
