--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -113,6 +113,56 @@ block content
             .row
                 .col.col--xl-12
                     .ui-rewiew__text.ui-text.ui-text--italic Кроме того, поверхность офисной перегородки может быть декорирована текстилем или виниловым покрытием. Вы можете заказать как типовое, так и дизайнерское оформление конструкции. Специалисты нашей компании благодаря своему большому опыту в силах реализовать любой проект.
+            .row
+                .col.col--xl-3
+                    .ui-material-box(style="background-image: url('/images/material-box/drywall-bg.png')")
+                        .ui-material-box__title Гипсокартон
+                        .ui-material-box__link
+                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                i +
+                .col.col--xl-3
+                    .ui-material-box(style="background-image: url('/images/material-box/pvc-bg.png')")
+                        .ui-material-box__title ПВХ
+                        .ui-material-box__link
+                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                i +
+                .col.col--xl-3
+                    .ui-material-box(style="background-image: url('/images/material-box/glass-bg.png')")
+                        .ui-material-box__title Стекло
+                        .ui-material-box__link
+                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                i +
+                .col.col--xl-3
+                    .ui-material-box(style="background-image: url('/images/material-box/mdf-bg.png')")
+                        .ui-material-box__title МДФ
+                        .ui-material-box__link
+                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                i +
+            .row
+                .col.col--xl-12
+                    .ui-mounting
+                        .ui-mounting__title Монтаж перегородок
+                        .ui-mounting__text Производство перегородок для офисных помещений не единственное направление деятельности компании«Оки-Доки», мы занимаемся и установкой конструкций. Почему стоит воспользоваться услугами именно нашей компании?
+            .row.row--xl-center
+                .col.col--xl-5
+                    .ui-our-advantages-title Ответом на этот#[br] вопрос будут наши#[br] преимущества:
+                .col.col--xl-7
+                    .ui-our-advantages-block
+                        ul.ui-our-advantages-block__list
+                            li •	&nbsp &nbsp Применение высокотехнологичного оборудования при производстве перегородок;
+                            li •	&nbsp &nbsp Использование материалов высокого качества;
+                            li •	&nbsp &nbsp Изготовление лучших комплектующих для перегородок;
+                            li •	&nbsp &nbsp Профессиональный монтаж специалистами компании;
+                            li •	&nbsp &nbsp Гарантия качества изделия и установки;
+                            li •	&nbsp &nbsp Производство офисных перегородокв «Оки-Доки» по дизайнерским проектам.
+            .row.row--xl-center
+                .col.col--xl-2
+                    .ui-home-price-box.ui-home-price-box__icon 
+                        img(src="/images/icons/money-bag.png")
+                .col.col--xl-10
+                    .ui-home-price-box
+                        .ui-home-price-box__title Стоимость офисных перегородок
+                        .ui-home-price-box__text Доступная цена на представленные товары – хороший бонус от компании«Оки-Доки». Низкая стоимость и высокое качество – оптимальные условия для того, чтобы заказать и купить офисную перегородку, к тому же широкий ассортимент дает свободу выбора. Стоимость зависит от нескольких факторов: материала, комплектующих, конфигурации и сложности монтажа конструкции.
     .ui-customer-reviews
         .grid.grid--container
             .row
