--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -45,15 +45,15 @@ block content
                 .col.col--xl-8.col--xl-align-middle.col--xl-flex
                     .ui-order__step
                         .ui-step
-                            .ui-step--first 
+                            .ui-step__first 
                                 img(src="/images/icons/order-step-1.png", alt="", height="51", width="61")
                                 .ui-step__title Вы отправляете заявку
                         .ui-step
-                            .ui-step--center 
+                            .ui-step__center 
                                 img(src="/images/icons/order-step-2.png", alt="", height="57", width="57")
                                 .ui-step__title Согласовываем #[br]дизайн-проект
                         .ui-step
-                            .ui-step--last 
+                            .ui-step__last 
                                 img(src="/images/icons/order-step-3.png", alt="", height="54", width="54")
                                 .ui-step__title Производим #[br]монтаж и установку
             
