--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -1,6 +1,26 @@
 extends _layouts/base
 
 block content
+    .ui-advantage
+        .grid.grid--container
+            .row.row--xl-center
+                .col.col--xl-12.col--xl-flex
+                    .ui-advantage__list
+                        .ui-advantage__icon
+                            img(src="/images/icons/experience.png")
+                        .ui-advantage__title Опыт
+                    .ui-advantage__list
+                        .ui-advantage__icon
+                            img(src="/images/icons/production.png")
+                        .ui-advantage__title Производство
+                    .ui-advantage__list
+                        .ui-advantage__icon
+                            img(src="/images/icons/guarantee.png")
+                        .ui-advantage__title Гарантия
+                    .ui-advantage__list
+                        .ui-advantage__icon
+                            img(src="/images/icons/price.png")
+                        .ui-advantage__title Цена
     .ui-configuration
         .grid.grid--container
             .row
