--- a/frontend/src/_styles/modules/button.styl
+++ b/frontend/src/_styles/modules/button.styl
@@ -19,7 +19,7 @@
     &--size-md
         font-size 20px
         font-family 'Panton'
-        padding 16px 34px
+        padding 16px 30px
         border 1px solid
 
     &--size-xs
@@ -53,6 +53,17 @@
         &:hover
             background-color $color-snow
             color $color-smokyblack
+
+    &--transparent
+        background-color rgba(11, 11, 11, 0.5)
+        color $color-darkcoral
+        padding 20px
+        width 145px
+
+        &:hover
+        &^[1]--active
+            background-color rgba(214, 80, 69, 0.5)
+            color $color-darkcoral
 
     &--pagination-prev
         background-color $color-pagination
