--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -21,6 +21,36 @@ block content
                         .ui-advantage__icon
                             img(src="/images/icons/price.png")
                         .ui-advantage__title Цена
+                        
+    .ui-our-production
+        .ui-our-production__title Наша продукция
+        .ui-our-production__cart
+            .ui-product-cart-small.ui-product-cart-small--darkcoral
+                .ui-product-cart-small__title.ui-product-cart-small__title--darkcoral Цельностеклянные#[br] перегородки
+                .ui-product-cart-small__description Цельностеклянные перегородки имеют безрамную конструкцию и создают ощущение открытого пространства в вашем офисе
+                .ui-product-cart-small__footer
+                    .ui-product-cart-small__price Цена от 3600 руб/м2
+                    .ui-product-cart-small__time Срок: от 10 дней
+                    .ui-product-cart-small__link
+                        a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                            i +
+            .ui-our-production__variation(style="background-image: url('/images/celnostekljannye-peregorodki-bg-1.png')")
+                .ui-our-production__navigation
+                    a.ui-button.ui-button--transparent Вариант 1
+                    a.ui-button.ui-button--transparent Вариант 2
+                    a.ui-button.ui-button--transparent Вариант 3
+                    a.ui-button.ui-button--transparent Вариант 4
+                    a.ui-button.ui-button--transparent Вариант 5
+            .ui-our-production__specifications 
+                .ui-specifications
+                    .ui-specifications__title Технические#[br] характеристики
+                    .ui-specifications__text Размеры:#[br]
+                        span Высота - до 2 000мм#[br] Ширина - 32 мм 
+                    .ui-specifications__text Вес:
+                        span от 15 кг/шт 
+                    .ui-specifications__text Материалы:#[br]
+                        span ДСП, ЛДСП, стекло
+                .ui-button.ui-button--default.ui-button--size-md Расчитать стоимость
     .ui-configuration
         .grid.grid--container
             .row
