--- a/frontend/src/_styles/modules/product-cart-small.styl
+++ b/frontend/src/_styles/modules/product-cart-small.styl
@@ -2,7 +2,7 @@
     background $color-bondiblue
     color #fff
     font-family 'Panton'
-    width 502px
+    width 100%
     box-shadow 0px 3px 21px 0px rgba(0, 0, 0, 0.2)
 
     &--darkcoral
