--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -522,7 +522,7 @@ init($breakpoints, $columns)
         color $color-medium
         line-height 70px
         padding-bottom 30px
-    
+
     &__product
         margin 45px 0
 
@@ -560,18 +560,29 @@ init($breakpoints, $columns)
         line-height 32px
         padding-bottom 48px
         padding 30px 55px
-        
+
     &__content
         padding 10px 55px
         flex 1
 
     &__text + &__text
         margin-top 30px
-        
+
     &__text
 
         span
             font-size 16px
-            
+
     &__button
         padding 30px 20px
+
+.ui-catalog-interactives
+    background url('/images/catalog-interactives-bg.png') no-repeat 50% 50%
+    padding-top 60px
+
+    &__title
+        font-family 'Panton'
+        font-size 55px
+        color #1c282a
+        line-height 70px
+        font-weight bold
