--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -586,3 +586,6 @@ init($breakpoints, $columns)
         color #1c282a
         line-height 70px
         font-weight bold
+
+.ui-main-home
+    background url('/images/main-home-bg.png') no-repeat 50% 50%
