--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -20,62 +20,63 @@ block content
                 .col.col--xl-8
                     .ui-catalog-interactives__img
                         img(src="/images/catalog-interactives.png")
-    .ui-advantage
-        .grid.grid--container
-            .row.row--xl-center
-                .col.col--xl-12.col--xl-flex
-                    .ui-advantage__list
-                        .ui-advantage__icon
-                            img(src="/images/icons/experience.png")
-                        .ui-advantage__title Опыт
-                    .ui-advantage__list
-                        .ui-advantage__icon
-                            img(src="/images/icons/production.png")
-                        .ui-advantage__title Производство
-                    .ui-advantage__list
-                        .ui-advantage__icon
-                            img(src="/images/icons/guarantee.png")
-                        .ui-advantage__title Гарантия
-                    .ui-advantage__list
-                        .ui-advantage__icon
-                            img(src="/images/icons/price.png")
-                        .ui-advantage__title Цена                      
-    .ui-our-production
-        .grid.grid--container
-            .row
-                .col.col--xl-12
-                    .ui-our-production__title Наша продукция
-            .row.row--no-gutters.ui-our-production__cart
-                .col.col--xl-3.col--no-gutters
-                    .ui-our-production__product
-                        .ui-product-cart-small.ui-product-cart-small--darkcoral
-                            .ui-product-cart-small__title.ui-product-cart-small__title--darkcoral Цельностеклянные#[br] перегородки
-                            .ui-product-cart-small__description Цельностеклянные перегородки имеют безрамную конструкцию и создают ощущение открытого пространства в вашем офисе
-                            .ui-product-cart-small__footer
-                                .ui-product-cart-small__price Цена от 3600 руб/м2
-                                .ui-product-cart-small__time Срок: от 10 дней
-                                .ui-product-cart-small__link
-                                    a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
-                                        i +
-                .ui-our-production__variation(style="background-image: url('/images/celnostekljannye-peregorodki-bg-1.png')")
-                    .ui-our-production__navigation
-                        a.ui-button.ui-button--block.ui-button--transparent Вариант 1
-                        a.ui-button.ui-button--block.ui-button--transparent Вариант 2
-                        a.ui-button.ui-button--block.ui-button--transparent Вариант 3
-                        a.ui-button.ui-button--block.ui-button--transparent Вариант 4
-                        a.ui-button.ui-button--block.ui-button--transparent Вариант 5
-                .ui-our-production__specifications 
-                    .ui-our-production-specifications
-                        .ui-our-production-specifications__title Технические#[br] характеристики
-                        .ui-our-production-specifications__content
-                            .ui-our-production-specifications__text Размеры:#[br]
-                                span Высота - до 2 000мм#[br] Ширина - 32 мм 
-                            .ui-our-production-specifications__text Вес:
-                                span &nbsp;от 15 кг/шт 
-                            .ui-our-production-specifications__text Материалы:#[br]
-                                span ДСП, ЛДСП, стекло
-                        .ui-our-production-specifications__button
-                            .ui-button.ui-button--default.ui-button--size-md Расчитать стоимость
+    .ui-main-home
+        .ui-advantage
+            .grid.grid--container
+                .row.row--xl-center
+                    .col.col--xl-12.col--xl-flex
+                        .ui-advantage__list
+                            .ui-advantage__icon
+                                img(src="/images/icons/experience.png")
+                            .ui-advantage__title Опыт
+                        .ui-advantage__list
+                            .ui-advantage__icon
+                                img(src="/images/icons/production.png")
+                            .ui-advantage__title Производство
+                        .ui-advantage__list
+                            .ui-advantage__icon
+                                img(src="/images/icons/guarantee.png")
+                            .ui-advantage__title Гарантия
+                        .ui-advantage__list
+                            .ui-advantage__icon
+                                img(src="/images/icons/price.png")
+                            .ui-advantage__title Цена                      
+        .ui-our-production
+            .grid.grid--container
+                .row
+                    .col.col--xl-12
+                        .ui-our-production__title Наша продукция
+                .row.row--no-gutters.ui-our-production__cart
+                    .col.col--xl-3.col--no-gutters
+                        .ui-our-production__product
+                            .ui-product-cart-small.ui-product-cart-small--darkcoral
+                                .ui-product-cart-small__title.ui-product-cart-small__title--darkcoral Цельностеклянные#[br] перегородки
+                                .ui-product-cart-small__description Цельностеклянные перегородки имеют безрамную конструкцию и создают ощущение открытого пространства в вашем офисе
+                                .ui-product-cart-small__footer
+                                    .ui-product-cart-small__price Цена от 3600 руб/м2
+                                    .ui-product-cart-small__time Срок: от 10 дней
+                                    .ui-product-cart-small__link
+                                        a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                            i +
+                    .ui-our-production__variation(style="background-image: url('/images/celnostekljannye-peregorodki-bg-1.png')")
+                        .ui-our-production__navigation
+                            a.ui-button.ui-button--block.ui-button--transparent Вариант 1
+                            a.ui-button.ui-button--block.ui-button--transparent Вариант 2
+                            a.ui-button.ui-button--block.ui-button--transparent Вариант 3
+                            a.ui-button.ui-button--block.ui-button--transparent Вариант 4
+                            a.ui-button.ui-button--block.ui-button--transparent Вариант 5
+                    .ui-our-production__specifications 
+                        .ui-our-production-specifications
+                            .ui-our-production-specifications__title Технические#[br] характеристики
+                            .ui-our-production-specifications__content
+                                .ui-our-production-specifications__text Размеры:#[br]
+                                    span Высота - до 2 000мм#[br] Ширина - 32 мм 
+                                .ui-our-production-specifications__text Вес:
+                                    span &nbsp;от 15 кг/шт 
+                                .ui-our-production-specifications__text Материалы:#[br]
+                                    span ДСП, ЛДСП, стекло
+                            .ui-our-production-specifications__button
+                                .ui-button.ui-button--default.ui-button--size-md Расчитать стоимость
     .ui-configuration
         .grid.grid--container
             .row
