* frontend: блок преимуществ на главной

--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -67,7 +67,7 @@ body.ui-page
                       .ui-menu__item
                           a.ui-menu__link(href="") Контакты
                     .col.col--xl-2.js-show-callback
-                        a.ui-button.ui-button--size-lg.ui-button--default.ui-button--block Перезвоните мне
+                        a.ui-button.ui-button--size-lg.ui-button--default.ui-button--callback Перезвоните мне
                     
     main.ui-content
         block content
