--- a/frontend/src/_styles/modules/button.styl
+++ b/frontend/src/_styles/modules/button.styl
@@ -81,7 +81,7 @@
         color $color-pagination
         border-color $color-smokyblack
         border-radius 2px
-        box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
+        box-shadow 0px 3px 5px 0px rgba(0, 0, 0, .1)
 
         &:hover
             background-color $color-snow
@@ -91,6 +91,17 @@
         display block
         text-align center
         width 100%
+        
+    &--callback
+        padding 8px
+        display block
+        text-align center
+        width 100%
+        font-size 20px
+        font-family 'Panton'
+        border-radius 0
+
+
 
 .ui-circle-button
     height 100%
