--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -24,23 +24,64 @@ block content
         .ui-advantage
             .grid.grid--container
                 .row.row--xl-center
-                    .col.col--xl-12.col--xl-flex
-                        .ui-advantage__list
-                            .ui-advantage__icon
-                                img(src="/images/icons/experience.png")
-                            .ui-advantage__title Опыт
-                        .ui-advantage__list
-                            .ui-advantage__icon
-                                img(src="/images/icons/production.png")
-                            .ui-advantage__title Производство
-                        .ui-advantage__list
-                            .ui-advantage__icon
-                                img(src="/images/icons/guarantee.png")
-                            .ui-advantage__title Гарантия
-                        .ui-advantage__list
-                            .ui-advantage__icon
-                                img(src="/images/icons/price.png")
-                            .ui-advantage__title Цена                      
+                    .col.col--xl.col--no-gutters
+                        .ui-advantage__item
+                            .ui-advantage__header
+                                .ui-advantage__icon
+                                    svg(xmlns="http://www.w3.org/2000/svg", width="38", height="39", viewBox="0 0 22.88 24")
+                                        path(d="M5,0.5v3C5,3.6,5,3.78,5,4c0,0.42,0,.88.08,1.38a26.6,26.6,0,0,0,.67,4.2C6.75,13.57,8.58,16,11.5,16s4.75-2.43,5.74-6.38a26.6,26.6,0,0,0,.67-4.2c0-.5.07-1,0.08-1.38,0-.25,0-0.43,0-0.53v-3A0.5,0.5,0,0,0,17.5,0H5.5A0.5,0.5,0,0,0,5,.5ZM17,1V3.5c0,0.09,0,.26,0,0.5,0,0.4,0,.85-0.08,1.34a25.62,25.62,0,0,1-.64,4C15.38,12.93,13.83,15,11.5,15S7.62,12.93,6.74,9.38a25.62,25.62,0,0,1-.64-4C6.05,4.85,6,4.4,6,4c0-.24,0-0.41,0-0.5V1H17Z")
+                                        path(d="M7,20.5v3a0.5,0.5,0,0,0,.5.5h8a0.5,0.5,0,0,0,.5-0.5v-3a0.5,0.5,0,0,0-.5-0.5h-8A0.5,0.5,0,0,0,7,20.5ZM8,21h7v2H8V21Z" transform="translate(-0.06 0)")
+                                        polygon(points="9.94 20.5 10.94 20.5 10.94 15 9.94 15 9.94 20.5")
+                                        polygon(points="11.94 20.5 12.94 20.5 12.94 15 11.94 15 11.94 20.5")
+                                        path(d="M16.63,13.66c0.24-.33,2.32-2.79,3-3.6a29.88,29.88,0,0,0,1.78-2.48c1.29-2,1.84-3.7,1.45-5a2.55,2.55,0,0,0-3.12-2,4.21,4.21,0,0,0-2.63,1.71,0.5,0.5,0,1,0,.88.48,3.28,3.28,0,0,1,1.95-1.21,1.57,1.57,0,0,1,2,1.32c0.28,1-.19,2.39-1.34,4.19A28.93,28.93,0,0,1,18.8,9.44c-0.62.79-2.71,3.26-3,3.63a1.62,1.62,0,0,0,2.31,2.23,0.5,0.5,0,1,0-.58-0.81A0.62,0.62,0,0,1,16.63,13.66Z")
+                                        path(d="M7.18,13.07c-0.27-.37-2.36-2.84-3-3.63A28.93,28.93,0,0,1,2.48,7C1.33,5.24.86,3.8,1.14,2.85a1.57,1.57,0,0,1,2-1.32A3.28,3.28,0,0,1,5.06,2.74a0.5,0.5,0,1,0,.88-0.48A4.21,4.21,0,0,0,3.3.55a2.55,2.55,0,0,0-3.12,2c-0.39,1.31.16,3,1.45,5a29.89,29.89,0,0,0,1.78,2.48c0.64,0.81,2.71,3.27,3,3.6a0.62,0.62,0,0,1-.92.82,0.5,0.5,0,0,0-.58.81A1.62,1.62,0,0,0,7.18,13.07Z")
+                                        path(d="M15,6.5A3.5,3.5,0,1,0,11.5,10,3.5,3.5,0,0,0,15,6.5Zm-6,0A2.5,2.5,0,1,1,11.5,9,2.5,2.5,0,0,1,9,6.5Z")
+                                .ui-advantage__title Опыт
+                            .ui-advantage__content
+                                .ui-advantage__text Компания «ОКИ-ДОКИ» работает на российском рынке систем офисных перегородок 13 лет! Начало нашей деятельности ...
+                                .ui-advantage__link
+                                    a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                        i +
+                    .col.col--xl.col--no-gutters
+                        .ui-advantage__item
+                            .ui-advantage__header
+                                .ui-advantage__icon
+                                    svg(xmlns="http://www.w3.org/2000/svg", width="38", height="40", viewBox="0 0 74.6 77")
+                                        path(d="M70.6,73V33.4L55.1,41.2V33.4l-15.3,8V33.1L24.4,43,21.8,20.1H8.9L3.8,73h-4v4H74.4V73H70.6ZM7.8,73l4.7-48.8h5.7L23.8,73H7.8Zm58.8,0H27.8L24.9,47.4l10.9-7V48l15.3-8v7.7l15.5-7.8V73ZM48.2,66.3H61.6V54H48.2V66.3Zm4-8.3h5.4v4.3H52.2V58ZM23.9,10.1H37.5A10.07,10.07,0,0,0,47.6,0h-4a6.12,6.12,0,0,1-6.1,6.1H23.9A10.07,10.07,0,0,0,13.8,16.2h4A6.12,6.12,0,0,1,23.9,10.1Zm7.2,56.2H44.5V54H31.1V66.3Zm4-8.3h5.4v4.3H35.1V58Z")
+                                .ui-advantage__title Производство
+                            .ui-advantage__content
+                                .ui-advantage__text Проектирование, производство, установка перегородок различного назначения (офисных и сантехнических) и любой конфигурации...
+                                .ui-advantage__link
+                                    a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                        i +
+                    .col.col--xl.col--no-gutters
+                        .ui-advantage__item
+                            .ui-advantage__header
+                                .ui-advantage__icon
+                                    svg(xmlns="http://www.w3.org/2000/svg", width="41", height="47", viewBox="0 0 54.52 82.23")
+                                        polygon(points="20.81 75.39 15.06 65 3.71 68.97 11.47 47.66 15.23 49.03 10.35 62.41 16.93 60.11 20.06 65.77 25.17 51.76 28.93 53.13 20.81 75.39")
+                                        polygon(points="35.2 82.23 24.57 53.05 28.32 51.68 35.95 72.61 39.08 66.95 45.66 69.25 38.81 50.48 42.57 49.1 52.31 75.81 40.95 71.84 35.2 82.23")
+                                        path(d="M27.26,54.52A27.26,27.26,0,1,1,54.52,27.26,27.29,27.29,0,0,1,27.26,54.52ZM27.26,4A23.26,23.26,0,1,0,50.52,27.26,23.29,23.29,0,0,0,27.26,4Z")
+                                        polygon(points="25.94 41.57 14.04 28.91 16.95 26.17 25.31 35.05 37.24 16.04 40.63 18.17 25.94 41.57")
+                                .ui-advantage__title Гарантия
+                            .ui-advantage__content
+                                .ui-advantage__text Гарантийное обслуживание (бесплатное для заказчика) включает устранение скрытых дефектов и недостатков конструкции в течение указанного срока гарантии – 3 года.
+                                .ui-advantage__link
+                                    a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                        i +
+                    .col.col--xl.col--no-gutters
+                        .ui-advantage__item
+                            .ui-advantage__header
+                                .ui-advantage__icon
+                                    svg(xmlns="http://www.w3.org/2000/svg", width="31", height="38", viewBox="0 0 75.37 91.32")
+                                        path(d="M43.85,34.93a5.19,5.19,0,0,0-3.55-1.47H38.15a5.53,5.53,0,0,0-5.48,5.48v6.17h7.64a5.14,5.14,0,0,0,5-5V38.48A5.4,5.4,0,0,0,43.85,34.93ZM32.67,53.29v4.24h7.64a4.09,4.09,0,0,1,0,8.18H32.67v4a4.09,4.09,0,1,1-8.18,0v-4H21.87a4.11,4.11,0,0,1,0-8.22l2.66,0V53.29l-2.66,0a4.09,4.09,0,0,1,0-8.18l2.66,0V38.94a5.64,5.64,0,0,1,.08-0.85A13.12,13.12,0,0,1,28.5,29.3a13.58,13.58,0,0,1,9.64-4h2.16A13.17,13.17,0,0,1,53.5,38.48V40.1A13.3,13.3,0,0,1,40.31,53.29H32.67Z")
+                                        path(d="M59.59,91.32H15.78A15.74,15.74,0,0,1,0,75.55V36.75A15.6,15.6,0,0,1,4.59,25.6l0.27-.27,21.91-21a15.77,15.77,0,0,1,21.79,0L70.51,25.33l0.23,0.23a16,16,0,0,1,4.63,11.19v38.8a16,16,0,0,1-4.63,11.19A15.75,15.75,0,0,1,59.59,91.32ZM10.38,80.91a7.51,7.51,0,0,0,5.4,2.24H59.59A7.52,7.52,0,0,0,65,80.95a7.74,7.74,0,0,0,2.24-5.4V36.75A7.78,7.78,0,0,0,65,31.35l-0.12-.12-0.08-.08L42.89,10.29a7.57,7.57,0,0,0-10.49,0L10.53,31.23l-0.15.15a7.43,7.43,0,0,0-2.2,5.36v38.8A7.39,7.39,0,0,0,10.38,80.91Z")
+                                .ui-advantage__title Цена
+                            .ui-advantage__content
+                                .ui-advantage__text Компания «ОКИ-ДОКИ» предлагает широкий диапазон цен – для заказчика с любым бюджетом мы воссоздадим благоприятное рабочее пространство.
+                                .ui-advantage__link
+                                    a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                        i +                
         .ui-our-production
             .grid.grid--container
                 .row
